# dj-base-project

./: CLAUDE.md  README.md  pyproject.toml
base_project/: apps.py  middleware_coop.py  middleware_db.py  redis_client.py  redis_lock.py  retry_utils.py
base_project/locale/de/LC_MESSAGES/: django.mo  django.po
base_project/templates/: _breadcrumb.html  _empty.html  _message.html  _pagination.html  base.html  base_container.html  base_container_fluid.html  base_dashboard.html  base_form.html  empty.html
base_project/templatetags/: lucide_tags.py  qsargs_tags.py  url_tags.py
base_project/tests/: test_imports.py  test_lucide_tags.py  test_redis_lock.py
