[project]
name = "dj-base-project"
version = "0.1.0"
description = "Reusable Django base app: generic base templates, url/qsargs/lucide templatetags, htmx static, Redis client with circuit breaker, distributed Redis locks, retry utilities and COOP/DB middleware."
authors = [{ name = "Stefan Ostrowski", email = "ostrowski@addvendo.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "django>=5,<6",
    "redis>=7,<8",
    "pybreaker>=1,<2",
    "channels>=4,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["base_project"]
